--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,13 +21,17 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '18.x'  # 设置 Node.js 版本
-        cache: 'npm'  # 缓存 npm 依赖
+
+
+       - name: Install pnpm
+      run: |
+        npm install -g pnpm
 
     - name: Install dependencies
-      run: npm install  # 安装项目依赖
+      run: pnpm install
 
     - name: Build the project
-      run: npm run build  # 构建项目（生成 dist 或 build 文件夹）
+      run: pnpm run build
 
     - name: Configure Git
       run: |
