--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,10 +20,9 @@ jobs:
     - name: Install Node.js and npm
       uses: actions/setup-node@v3
       with:
-        node-version: '18.x'  # 设置 Node.js 版本
+        node-version: '18.x'
 
-
-       - name: Install pnpm
+    - name: Install pnpm
       run: |
         npm install -g pnpm
 
